@@ -33,30 +33,28 @@
             </a>
             {% if s.id in usedSkills == false %}
               &nbsp;&nbsp;
-              <a href="#">
-                <span id='{{ s.id }}' class="pl-icon pl-icon-drop" title="Supprimer" onclick="confirmDel(this.id)">
-                  <script>
-                    function confirmDel(id){
-                      if (window.confirm("Voulez-vous vraiment supprimer cette activité ?")){
-                        CSRFToken = $('#CSRFSession').val();
-                        $.ajax({
-                          url : '{{ asset("skill") }}',
-                          type : 'DELETE',
-                          data : {id: id, CSRFToken: CSRFToken},
-                          success: function(response){
-                            if (response == "Ok"){
-                              window.location.reload('/skill');
-                            }
-                          },
-                          error: function(){
-                            CJInfo("Une erreur est survenue lors de la suppression","error")
+              <span id='{{ s.id }}' class="pl-icon pl-icon-drop pointer" title="Supprimer" onclick="confirmDel(this.id)">
+                <script>
+                  function confirmDel(id){
+                    if (window.confirm("Voulez-vous vraiment supprimer cette activité ?")){
+                      CSRFToken = $('#CSRFSession').val();
+                      $.ajax({
+                        url : '{{ asset("skill") }}',
+                        type : 'DELETE',
+                        data : {id: id, CSRFToken: CSRFToken},
+                        success: function(response){
+                          if (response == "Ok"){
+                            window.location.reload('/skill');
                           }
-                        });
-                      }
+                        },
+                        error: function(){
+                          CJInfo("Une erreur est survenue lors de la suppression","error")
+                        }
+                      });
                     }
-                  </script>
-                </span>
-              </a>
+                  }
+                </script>
+              </span>
             {% endif %}
           </td>
           <td>{{ s.nom }}</td>
